# CMSIS-STM32

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.c  main_adc.c  main_nocmsis.c
Common/: linker_script_f446re.ld
Projects/adc_dac_example/: CMakeLists.txt  README.md  exec.elf  exec.map
Projects/adc_dac_example/Src/: main.c
Projects/gpio_reader/: CMakeLists.txt  README.md  exec.elf  exec.map
Projects/gpio_reader/Src/: main.c  startup_f446re.c
Projects/no_cmsis_example/: CMakeLists.txt  exec.elf  exec.map
Scripts/: generate_cmsis_project.sh
